Fix mobile horizontal scrolling on iOS

--- a/style.css
+++ b/style.css
@@ -387,9 +387,11 @@ header {
     }
 }
 
-body {
+html, body {
     position: relative;
     overflow-x: hidden;
+    max-width: 100%;
+    width: 100%;
 }
 
 
